--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- <title>React App</title> -->
+    <title>Amor Pistacho</title>
+    <meta name="description" content="Una marca con sabor, frescura y estilo. Amor Pistacho: natural, artesanal y memorable.">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
